# lorevault

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  lorevault_example.toml
src/: cli.rs  config.rs  decrypt.rs  directories.rs  edits.rs  lorevault_example.toml  main.rs  memfolder.rs  sources.rs  variables.rs
testing/: bigtest1.toml  bigtest2.toml  bigtest3.toml  decryption.toml  default_tags.toml  edits_test.toml  failure1.toml  failure2.toml  failure3.toml  failure4.toml  failure5.toml  gittest.toml  included1.toml  included2.toml  included3.toml  included4.toml  testarchive.tar.xz  testconfig1.toml  testconfig2.toml  testconfig3.toml  testconfig4.toml  testconfig6.toml  testconfig7.toml  testconfig8.toml  testconfig9.toml  testkey.txt  testsecret.age
testing/testfolder/subfolder/: file2.txt
