[package]
name = "lorevault"
version = "1.1.1"
edition = "2021"
authors = ["Jan Neuendorf"]
description = "A simple program to create a directory from a recipe."
license="MIT"

[dependencies]
anyhow = "1.0.81"
auth-git2 = "0.5.4"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.4"
dialoguer = "0.11.0"
git2 = {version="0.18.3",features=["vendored-libgit2"]}
indicatif = "0.17.8"
once_cell = "1.19.0"
openssl = { version = "0.10.64", features = ["vendored"],optional = false }
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
sha3 = "0.10.8"
ssh2 = "0.9.4"
tempfile = "3.10.1"
termion = "3.0.0"
toml = "0.8.12"
tracing = {version="0.1.40",optional=true}
tracing-subscriber ={version= "0.3.18",optional=true}

[profile.release]
opt-level = 3
strip = true 
lto = true

[features]
debug =["tracing","tracing-subscriber"]
